[tool.poetry]
authors = ["Idein Inc."]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
]
description = "actfw's additional components using GStreamer"
keywords = ['actcast']
license = "MIT"
name = "actfw-gstreamer"
readme = "README.md"
repository = "https://github.com/Idein/actfw-gstreamer"
version = "0.1.0a7"

[tool.poetry.dependencies]
python = "^3.6"

Pillow = "^5"
PyGObject = "^3.40.1"
actfw-core = "2.0.0"
result = "^0.6.0"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.3"
numpy = "^1.19"
pysen = {version = "^0.9.1", extras = ["lint"]}
pytest = "^6.2.3"
sphinx-theme = "^1.0"

[tool.poetry.urls]
"Repository" = "https://github.com/Idein/actfw-gstreamer"
"Documentation" = "https://idein.github.io/actfw-gstreamer/latest/"
"Changelog" = "https://github.com/Idein/actfw-gstreamer/blob/master/CHANGELOG.md"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 128
py_version = "py38"

[[tool.pysen.lint.mypy_targets]]
paths = ["."]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
